--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>美食介紹</title>
+    <title>台東美食地圖</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,28 +42,28 @@
 <body>
     <header>
         <h1>美食介紹</h1>
-        <p>探索世界各地的美味佳餚</p>
+        <p>探索台東各地的美味佳餚</p>
     </header>
     <main>
         <div class="food-item">
             <img src="https://example.com/image1.jpg" alt="美食1">
             <div class="food-description">
-                <h2>美食名稱1</h2>
-                <p>這是一道來自於某地的美食，擁有獨特的風味。</p>
+                <h2>長聲塩人</h2>
+                <p>這是一道來自於日本的美食，擁有獨特的風味。</p>
             </div>
         </div>
         <div class="food-item">
             <img src="https://example.com/image2.jpg" alt="美食2">
             <div class="food-description">
-                <h2>美食名稱2</h2>
-                <p>這是一道傳統的佳餚，深受大家喜愛。</p>
+                <h2>厚道</h2>
+                <p>這是一間開在台東大學內的餐館，態度親和，深受大家喜愛。</p>
             </div>
         </div>
         <div class="food-item">
             <img src="https://example.com/image3.jpg" alt="美食3">
             <div class="food-description">
-                <h2>美食名稱3</h2>
-                <p>這道美食以其美味的口感著稱，絕對不容錯過。</p>
+                <h2>炒鬧食堂</h2>
+                <p>這也是一間開在台東大學內的餐館，其各種各樣的炒飯令學生們餐餐皆能吃出驚奇。</p>
             </div>
         </div>
     </main>
