--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="food-item">
             <img src="https://example.com/image1.jpg" alt="美食1">
             <div class="food-description">
-                <h2>長聲塩人</h2>
+                <h2>長生塩人</h2>
                 <p>這是一道來自於日本的美食，擁有獨特的風味。</p>
             </div>
         </div>
